--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 </head>
 <body>
     <form action="trans.php" method="POST" enctype="multipart/form-data">
+        <!--<label for="inputImage">Upload Image</label>-->
         <input type="file" name="image">
-        <input type="number" name="width" placeholder="width">
-        <input type="number" name="height" placeholder="height">
-        <input type="submit" value="Process">  
+        <input type="submit" value="Process">
     </form>
 </body>
 </html>
